// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xy_expression XYChart component it renders area 1`] = `
<Chart
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
    theme={
      Object {
        "areaSeriesStyle": Object {
          "area": Object {
            "opacity": 0.3,
          },
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
            "visible": false,
          },
        },
        "axes": Object {
          "axisLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
          },
          "axisTitleStyle": Object {
            "fill": "rgba(52, 55, 65, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 12,
            "padding": 10,
          },
          "tickLabelStyle": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 10,
            "padding": 8,
          },
          "tickLineStyle": Object {
            "stroke": "rgba(0,0,0,0)",
            "strokeWidth": 0,
          },
        },
        "barSeriesStyle": Object {
          "displayValue": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 8,
          },
        },
        "chartMargins": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "colors": Object {
          "defaultVizColor": "#3185FC",
          "vizColors": Array [
            "#1EA593",
            "#2B70F7",
            "#CE0060",
            "#38007E",
            "#FCA5D3",
            "#F37020",
            "#E49E29",
            "#B0916F",
            "#7B000B",
            "#34130C",
          ],
        },
        "crosshair": Object {
          "band": Object {
            "fill": "rgba(245, 247, 250, 1)",
          },
          "line": Object {
            "dash": Array [
              4,
              4,
            ],
            "stroke": "rgba(105, 112, 125, 1)",
            "strokeWidth": 1,
          },
        },
        "lineSeriesStyle": Object {
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
          },
        },
      }
    }
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AreaSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "c": "I",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "c": "J",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders bar 1`] = `
<Chart
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
    theme={
      Object {
        "areaSeriesStyle": Object {
          "area": Object {
            "opacity": 0.3,
          },
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
            "visible": false,
          },
        },
        "axes": Object {
          "axisLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
          },
          "axisTitleStyle": Object {
            "fill": "rgba(52, 55, 65, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 12,
            "padding": 10,
          },
          "tickLabelStyle": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 10,
            "padding": 8,
          },
          "tickLineStyle": Object {
            "stroke": "rgba(0,0,0,0)",
            "strokeWidth": 0,
          },
        },
        "barSeriesStyle": Object {
          "displayValue": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 8,
          },
        },
        "chartMargins": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "colors": Object {
          "defaultVizColor": "#3185FC",
          "vizColors": Array [
            "#1EA593",
            "#2B70F7",
            "#CE0060",
            "#38007E",
            "#FCA5D3",
            "#F37020",
            "#E49E29",
            "#B0916F",
            "#7B000B",
            "#34130C",
          ],
        },
        "crosshair": Object {
          "band": Object {
            "fill": "rgba(245, 247, 250, 1)",
          },
          "line": Object {
            "dash": Array [
              4,
              4,
            ],
            "stroke": "rgba(105, 112, 125, 1)",
            "strokeWidth": 1,
          },
        },
        "lineSeriesStyle": Object {
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
          },
        },
      }
    }
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-BarSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "c": "I",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "c": "J",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders horizontal bar 1`] = `
<Chart
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={90}
    showLegend={false}
    showLegendDisplayValue={false}
    theme={
      Object {
        "areaSeriesStyle": Object {
          "area": Object {
            "opacity": 0.3,
          },
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
            "visible": false,
          },
        },
        "axes": Object {
          "axisLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
          },
          "axisTitleStyle": Object {
            "fill": "rgba(52, 55, 65, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 12,
            "padding": 10,
          },
          "tickLabelStyle": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 10,
            "padding": 8,
          },
          "tickLineStyle": Object {
            "stroke": "rgba(0,0,0,0)",
            "strokeWidth": 0,
          },
        },
        "barSeriesStyle": Object {
          "displayValue": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 8,
          },
        },
        "chartMargins": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "colors": Object {
          "defaultVizColor": "#3185FC",
          "vizColors": Array [
            "#1EA593",
            "#2B70F7",
            "#CE0060",
            "#38007E",
            "#FCA5D3",
            "#F37020",
            "#E49E29",
            "#B0916F",
            "#7B000B",
            "#34130C",
          ],
        },
        "crosshair": Object {
          "band": Object {
            "fill": "rgba(245, 247, 250, 1)",
          },
          "line": Object {
            "dash": Array [
              4,
              4,
            ],
            "stroke": "rgba(105, 112, 125, 1)",
            "strokeWidth": 1,
          },
        },
        "lineSeriesStyle": Object {
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
          },
        },
      }
    }
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-BarSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "c": "I",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "c": "J",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders line 1`] = `
<Chart
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
    theme={
      Object {
        "areaSeriesStyle": Object {
          "area": Object {
            "opacity": 0.3,
          },
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
            "visible": false,
          },
        },
        "axes": Object {
          "axisLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
          },
          "axisTitleStyle": Object {
            "fill": "rgba(52, 55, 65, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 12,
            "padding": 10,
          },
          "tickLabelStyle": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 10,
            "padding": 8,
          },
          "tickLineStyle": Object {
            "stroke": "rgba(0,0,0,0)",
            "strokeWidth": 0,
          },
        },
        "barSeriesStyle": Object {
          "displayValue": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 8,
          },
        },
        "chartMargins": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "colors": Object {
          "defaultVizColor": "#3185FC",
          "vizColors": Array [
            "#1EA593",
            "#2B70F7",
            "#CE0060",
            "#38007E",
            "#FCA5D3",
            "#F37020",
            "#E49E29",
            "#B0916F",
            "#7B000B",
            "#34130C",
          ],
        },
        "crosshair": Object {
          "band": Object {
            "fill": "rgba(245, 247, 250, 1)",
          },
          "line": Object {
            "dash": Array [
              4,
              4,
            ],
            "stroke": "rgba(105, 112, 125, 1)",
            "strokeWidth": 1,
          },
        },
        "lineSeriesStyle": Object {
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
          },
        },
      }
    }
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-LineSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "c": "I",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "c": "J",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked area 1`] = `
<Chart
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
    theme={
      Object {
        "areaSeriesStyle": Object {
          "area": Object {
            "opacity": 0.3,
          },
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
            "visible": false,
          },
        },
        "axes": Object {
          "axisLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
          },
          "axisTitleStyle": Object {
            "fill": "rgba(52, 55, 65, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 12,
            "padding": 10,
          },
          "tickLabelStyle": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 10,
            "padding": 8,
          },
          "tickLineStyle": Object {
            "stroke": "rgba(0,0,0,0)",
            "strokeWidth": 0,
          },
        },
        "barSeriesStyle": Object {
          "displayValue": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 8,
          },
        },
        "chartMargins": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "colors": Object {
          "defaultVizColor": "#3185FC",
          "vizColors": Array [
            "#1EA593",
            "#2B70F7",
            "#CE0060",
            "#38007E",
            "#FCA5D3",
            "#F37020",
            "#E49E29",
            "#B0916F",
            "#7B000B",
            "#34130C",
          ],
        },
        "crosshair": Object {
          "band": Object {
            "fill": "rgba(245, 247, 250, 1)",
          },
          "line": Object {
            "dash": Array [
              4,
              4,
            ],
            "stroke": "rgba(105, 112, 125, 1)",
            "strokeWidth": 1,
          },
        },
        "lineSeriesStyle": Object {
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
          },
        },
      }
    }
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AreaSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "c": "I",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "c": "J",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked bar 1`] = `
<Chart
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
    theme={
      Object {
        "areaSeriesStyle": Object {
          "area": Object {
            "opacity": 0.3,
          },
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
            "visible": false,
          },
        },
        "axes": Object {
          "axisLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
          },
          "axisTitleStyle": Object {
            "fill": "rgba(52, 55, 65, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 12,
            "padding": 10,
          },
          "tickLabelStyle": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 10,
            "padding": 8,
          },
          "tickLineStyle": Object {
            "stroke": "rgba(0,0,0,0)",
            "strokeWidth": 0,
          },
        },
        "barSeriesStyle": Object {
          "displayValue": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 8,
          },
        },
        "chartMargins": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "colors": Object {
          "defaultVizColor": "#3185FC",
          "vizColors": Array [
            "#1EA593",
            "#2B70F7",
            "#CE0060",
            "#38007E",
            "#FCA5D3",
            "#F37020",
            "#E49E29",
            "#B0916F",
            "#7B000B",
            "#34130C",
          ],
        },
        "crosshair": Object {
          "band": Object {
            "fill": "rgba(245, 247, 250, 1)",
          },
          "line": Object {
            "dash": Array [
              4,
              4,
            ],
            "stroke": "rgba(105, 112, 125, 1)",
            "strokeWidth": 1,
          },
        },
        "lineSeriesStyle": Object {
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
          },
        },
      }
    }
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-BarSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "c": "I",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "c": "J",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked horizontal bar 1`] = `
<Chart
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={90}
    showLegend={false}
    showLegendDisplayValue={false}
    theme={
      Object {
        "areaSeriesStyle": Object {
          "area": Object {
            "opacity": 0.3,
          },
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
            "visible": false,
          },
        },
        "axes": Object {
          "axisLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
          },
          "axisTitleStyle": Object {
            "fill": "rgba(52, 55, 65, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 12,
            "padding": 10,
          },
          "tickLabelStyle": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 10,
            "padding": 8,
          },
          "tickLineStyle": Object {
            "stroke": "rgba(0,0,0,0)",
            "strokeWidth": 0,
          },
        },
        "barSeriesStyle": Object {
          "displayValue": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 8,
          },
        },
        "chartMargins": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "colors": Object {
          "defaultVizColor": "#3185FC",
          "vizColors": Array [
            "#1EA593",
            "#2B70F7",
            "#CE0060",
            "#38007E",
            "#FCA5D3",
            "#F37020",
            "#E49E29",
            "#B0916F",
            "#7B000B",
            "#34130C",
          ],
        },
        "crosshair": Object {
          "band": Object {
            "fill": "rgba(245, 247, 250, 1)",
          },
          "line": Object {
            "dash": Array [
              4,
              4,
            ],
            "stroke": "rgba(105, 112, 125, 1)",
            "strokeWidth": 1,
          },
        },
        "lineSeriesStyle": Object {
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
          },
        },
      }
    }
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-BarSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "c": "I",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "c": "J",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;
